--- a/scss/global/variables.scss
+++ b/scss/global/variables.scss
@@ -8,6 +8,7 @@ $croxo-font-text: 'Syne';
 //text
 $font-size-h1: 54px;
 $font-size-h1-xl: 72px;
+$font-size-h1-xl-mob: 54px;
 $font-size-h1-xxl: 84px;
 $font-size-label-sm: 12px;
 $font-size-label: 14px;
