--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,8 +1,24 @@
 .croxo-footer {
     .footer-inner {
         max-width: unset;
+
+        >p {
+            font-size: 14px;
+            font-weight: 550;
+        }
+
         .copyright {
             max-width: unset !important;
+
+            p {
+                font-size: 11px;
+                font-weight: 550;
+                margin-top: 12px;
+
+                @include media-breakpoint-up(md) {
+                    margin-top: 0;
+                }
+            }
         }
     }
 }
