--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,6 +38,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 
 @import './global/variables.scss';
 @import './global/globalStyles.scss';
+@import './global/customPostType.scss';
 @import './croxoicons/style.scss';
 @import 'header';
 @import 'pages';
