--- a/scss/filters/workFilters.scss
+++ b/scss/filters/workFilters.scss
@@ -16,7 +16,7 @@
             .post-type-filter__wrapper {
                 label {
                     border-left-width: 0px;
-                    border-top-width: 0px;
+                    border-top-width: 0px; 
 
                     input {
                         &:checked {
@@ -30,6 +30,7 @@
                     span {
                         height: 100%;
                         font-size: 16px;
+                        padding-top: 13px !important;
                     }
                 }
             }
