--- a/scss/menus/topNav.scss
+++ b/scss/menus/topNav.scss
@@ -1,5 +1,4 @@
 .site-navigation {
-
 	&.site-navigation--work-grid {
 		@include media-breakpoint-up(md) {
 			justify-content: center;
@@ -18,7 +17,16 @@
 		}
 	}
 
+	.post-type-filter__main-nav {
+		width: 100%;
+
+		@include media-breakpoint-up(md) {
+			width: initial;
+		}
+	}
+
 	.menu-topnav-container {
+
 		.menu {
 			display: flex;
 			margin: 0;
@@ -26,7 +34,12 @@
 
 			li {
 				list-style-type: none;
+				flex: 1;
 				flex-shrink: 0;
+
+				@include media-breakpoint-up(md) {
+					flex: initial;
+				}
 
 				&:first-child {
 					a {
@@ -116,15 +129,17 @@
 					color: $croxo-color-black;
 					font-family: $croxo-font-text;
 					font-weight: 600;
-					font-size: 16px;
+					font-size: 12px;
 					letter-spacing: .2px;
-					padding: 8px 16px;
+					padding: 4px 8px;
 					text-decoration: none;
 					text-transform: uppercase;
 					transition: all 350ms;
+					width: 100%;
 
 					@include media-breakpoint-up(md) {
-						padding: 4px 8px;
+						font-size: 16px;
+						width: initial;
 					}
 
 					&:hover {
@@ -181,6 +196,7 @@
 						border-top-width: 0 !important;
 						display: flex;
 						padding-left: 24px;
+						padding-right: 24px;
 					}
 				}
 			}
